Adding emails and notification toggling by link

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,1 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-<%= link_to "Notify", notify_path, class: "btn btn-lg btn-primary" %>
+<p>Placeholder root path</p>
