--- a/app/views/text_mailer/status_email.html.erb
+++ b/app/views/text_mailer/status_email.html.erb
@@ -4,6 +4,10 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p> This is a test email to <%= @user.name %></p>
+    <p> 
+    This is a test email showing <%= @status %>, sent at <%= @timestamp %> PST
+    
+    <%= link_to "Link to toggle notifications: ", edit_toggle_notification_url(@user.toggle_token, email: @user.email) %>
+    </p>
   </body>
 </html>
