--- a/app/views/text_mailer/status_email.text.erb
+++ b/app/views/text_mailer/status_email.text.erb
@@ -1,3 +1,7 @@
 TITLE
 =============================
-This is a test email to <%= @user.name %>
+This is a test email showing <%= @status %>, sent at <% @timestamp %> PST
+
+Link to toggle notifications:
+
+<%= edit_toggle_notification_url(id: @user.toggle_token, email: @user.email) %>
