--- a/app/views/text_mailer/status_email.text.erb
+++ b/app/views/text_mailer/status_email.text.erb
@@ -1,6 +1,4 @@
-TITLE
-=============================
-This is a test email showing <%= @status %>, sent at <% @timestamp %> PST
+The door is <%= @status %>
 
 Link to toggle notifications:
 
