--- a/app/views/text_mailer/normal_email.text.erb
+++ b/app/views/text_mailer/normal_email.text.erb
@@ -1,5 +1,5 @@
 The door is <%= @status %>
 
-Link to toggle normal notifications:
-
-<%= edit_toggle_notification_url(id: @user.toggle_token, email: @user.email) %>
+<a href=<%= edit_toggle_notification_url(id: @user.toggle_token, email: @user.email) %>>
+  Link to toggle normal notifications:
+</a>
